--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.wrapper{
+  height: 100vh;
+  background-color: #F4F4F4;
+}
 
