--- a/src/header/autocomplete/autocomplete.scss
+++ b/src/header/autocomplete/autocomplete.scss
@@ -17,8 +17,9 @@
         position: absolute;
         background-color: white;
         width: 100%;
-        top: 33px;
+        top: 32px;
         border: solid 2px #777777;
+        left: -2px;
 
         .selectOption{
             cursor: pointer;
