--- a/src/weather-week/detail-day/detail-day.scss
+++ b/src/weather-week/detail-day/detail-day.scss
@@ -26,11 +26,23 @@
             background-color: rgba(0, 0, 0, .1);
 
             padding: 4px 8px;
+            font-weight: bolder;
         }
 
         .hour-value{
-         line-height: 44px;
-         text-align: center;
+            line-height: 44px;
+            text-align: center;
+            font-size: 18px;
         }
+
+        @media only screen and (max-width: 450px) {
+            width: 114px;
+            flex-direction: unset;
+            height: unset;
+
+            .hour-label,.hour-value{
+                width: 50%;
+            }
+          }
     }
 }
