--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -26,5 +26,15 @@
             display: inline-block;
             width: 20%;
         }
+
+        @media only screen and (max-width: 450px) {
+            padding: 10px 15px;
+          }
+       
     }
+
+    @media only screen and (max-width: 450px) {
+        height: 150px;
+      }
+    
 }
