--- a/src/weather-week/weather-week.scss
+++ b/src/weather-week/weather-week.scss
@@ -3,6 +3,10 @@
         padding: 30px 50px;
     
         background: #F4F4F4;
+        h1{
+            margin: 0 auto;
+             width: fit-content;
+        }
 
 
         .week{
@@ -17,6 +21,17 @@
 
             .week-day-container{
                 box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+                @media only screen and (max-width: 450px) {
+                    box-shadow:unset;
+                }
             }
+
+            @media only screen and (max-width: 450px) {
+                grid-template-columns: repeat(7, calc(120px));
+                overflow: auto;
+                padding: 18px 0px;
+            }
+
         }
 }
