--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -20,21 +20,32 @@
             display: inline-block;
             width: 75%;
             padding-right: 20px;
+
+            @media only screen and (max-width: 450px) {
+                width: 100%;
+                padding-right: 0;
+            }
         }
 
         span{
             display: inline-block;
             width: 20%;
+            font-size: 20px;
+            @media only screen and (max-width: 450px) {
+                width: 100%;
+            }
         }
 
         @media only screen and (max-width: 450px) {
             padding: 10px 15px;
+            flex-direction: column-reverse;
+            display: flex;
           }
        
     }
 
     @media only screen and (max-width: 450px) {
-        height: 150px;
+        height: 85px;
       }
     
 }
