--- a/src/weather-week/weather-week.scss
+++ b/src/weather-week/weather-week.scss
@@ -5,14 +5,14 @@
         background: #F4F4F4;
         h1{
             margin: 0 auto;
-             width: fit-content;
+            width: fit-content;
+            text-align: center;
         }
-
 
         .week{
        
-            padding: 80px 15px;
-            margin: 0 auto;
+            padding: 0px 15px;
+            margin: 80px auto;
        
             grid-template-columns: repeat( auto-fill, minmax(120px, 1fr) );
             max-width: calc(7 * 125px);
@@ -30,7 +30,7 @@
             @media only screen and (max-width: 450px) {
                 grid-template-columns: repeat(7, calc(120px));
                 overflow: auto;
-                padding: 18px 0px;
+                margin: 18px auto;
             }
 
         }
